--- a/popup.html
+++ b/popup.html
@@ -22,10 +22,11 @@
 					<button id="vol-plus" type="button">+5%</button>
 				</div>
 				<div class="tbr-controls__slider">
-					<div class="tbr-slider-ticks" id="vol-ticks"></div>
 					<input id="vol-slider" type="range" id="volume-slider" min="0" max="500" step="5" value="100" placeholder="100">
 				</div>
-				<div class="tbr-controls__static-values"></div>
+				<div class="tbr-controls__static-values">
+					<button type="button">Blank button</button><button type="button">Blank button</button>
+				</div>
 			</div>
 			<div class="tbr-audible-tabs-list"></div>
 		</main>
