--- a/popup.html
+++ b/popup.html
@@ -33,7 +33,7 @@
 		<footer class="tbr-footer">
 			<p class="tbr-credit">
 				<span data-localeKey="createdBy">by</span>
-				<a href="https://github.com/DemerNkardaz" target="_blank" rel="noopener noreferrer" data-localeKey="author">Yalla Nkardaz</a>
+				<a href="https://github.com/DemerNkardaz" target="_blank" rel="noopener noreferrer" data-localeKey=authorInflected>Yalla Nkardaz</a>
 			</p>
 
 		</footer>
